tests/ui/test-attrs/test-attr-non-associated-functions.stderr
error: `#[test]` attribute is only allowed on non associated functions
  --> $DIR/test-attr-non-associated-functions.rs:9:5
   |
LL | /     fn new() -> A {
LL | |
LL | |         A {}
LL | |     }
   | |_____^

error: `#[test]` attribute is only allowed on non associated functions
  --> $DIR/test-attr-non-associated-functions.rs:14:5
   |
LL | /     fn recovery_witness() -> A {
LL | |
LL | |         A {}
LL | |     }
   | |_____^

error: aborting due to 2 previous errors

